--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "author": "@th0rgall",
   "license": "MIT",
   "dependencies": {
+    "lodash": "^4.17.13",
     "lodash.clone": "^4.5.0",
     "voc-dom": "th0rgall/voc-dom",
     "voc-http": "th0rgall/voc-http"
